removed scrollbar as it is causing issue on mobile

--- a/BK/bk-ui/src/app/main/content/content.component.scss
+++ b/BK/bk-ui/src/app/main/content/content.component.scss
@@ -3,5 +3,6 @@
 }
 
 .mainContent{
-    padding: 10px 10px 10px 10px;    
+    padding: 10px 10px 10px 10px;  
+    overflow: auto;  
 }
